# musical-lights-rs

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
.github/workflows/: gh-pages-deploy.yml
musical-adafruit-sparkle/: Cargo.toml  NOTES.md  README.md
musical-adafruit-sparkle-embassy/: Cargo.toml  README.md  diagram.json  wokwi.toml
musical-adafruit-sparkle-embassy/.devcontainer/: Dockerfile  devcontainer.json
musical-adafruit-sparkle-embassy/src/: fps.rs
musical-adafruit-sparkle-idf/: Cargo.toml  DESIGN.md  README.md  diagram.json  sdkconfig.defaults  wokwi.toml
musical-adafruit-sparkle-idf/.cargo/: config.toml
musical-adafruit-sparkle-idf/src/: debug.rs  fps.rs  main.rs  sensor_uart.rs
musical-adafruit-sparkle-idf/src/light_patterns/: clock.rs  compass.rs  fibonacci_layout.rs  flashlight.rs  loading.rs  mic_fire.rs  mic_loudness.rs  mod.rs  rainbow.rs  startup.rs
musical-adafruit-sparkle/.cargo/: config.toml
musical-adafruit-sparkle/src/: lib.rs
musical-feather-m0/: Cargo.toml
musical-feather-m0/src/: main.rs
musical-leptos/: Cargo.toml  README.md  Trunk.toml  index.html  localhost.crt  localhost.key
musical-leptos-0/: Cargo.toml
musical-leptos-0/src/: audio.rs  lib.rs  main.rs
musical-leptos/public/: styles.css
musical-leptos/src/: EncoderDecoderTogether.min.js  audio.rs  audio_polyfill.js  audio_worklet.js  counter.rs  dependent_module.rs  lib.rs  main.rs  my-wasm-processor.js  wasm_audio.rs
musical-leptos/src/components/: dancing_lights.rs  mod.rs
musical-leptos/src/pages/: about.rs  home.rs  not_found.rs
musical-lights-core/: Cargo.toml
musical-lights-core/src/: battery.rs  compass.rs  config.rs  errors.rs  fps.rs  gps.rs  hanning.rs  lib.rs  logging.rs  message.rs  microphone.rs  orientation.rs  radio.rs  speaker.rs
musical-lights-core/src/audio/: amplitudes.rs  bark_scale.rs  buffer.rs  buffered_fft.rs  decibels.rs  down_resistance_builder.rs  exponential_scale.rs  fft.rs  filter_bank.rs  i2s.rs  mod.rs  peak_scaled.rs  samples.rs  shazam.rs
musical-lights-core/src/audio/weighting/: a_weighting.rs  flat.rs  mod.rs
musical-lights-core/src/iter/: mod.rs
musical-lights-core/src/lights/: clock.rs  color_correction.rs  dancing_lights.rs  flag.rs  gradient.rs  matrix.rs  mod.rs
musical-lights-core/src/windows/: flat.rs  hanning.rs  mod.rs
musical-lights-mac/: Cargo.toml
musical-lights-mac/src/: audio.rs  main.rs
musical-stm32/: Cargo.toml  Notes.md
musical-stm32/.cargo/: config
musical-stm32/src/: leds.rs  lib.rs  main.rs  sparkle_uart.rs
musical-terminal/: Cargo.toml  README.md
musical-terminal/examples/: pacman.rs
musical-terminal/src/: audio.rs  lib.rs  main.rs
musical-wasm/: Cargo.toml  README.md  build.py  rust-toolchain.toml
musical-wasm/src/: dependent_module.rs  lib.rs
