[workspace]

resolver = "2"

members = ["musical-lights-core"]

exclude = [
    "musical-adafruit-sparkle-embassy",
    "musical-adafruit-sparkle-idf",
    "musical-feather-m0",
    "musical-leptos",
    "musical-stm32",
    "musical-terminal",
    "musical-wasm",
]

[patch.crates-io]
# we patch all embassy crates to the current main. this is because they haven't released versions of everything that use the newest embassy-sync
# TODO: embassy feature on musical-lights-core that handles this?
# embassy-embedded-hal = { git = "https://github.com/embassy-rs/embassy.git", rev = "6186d111a5c150946ee5b7e9e68d987a38c1a463" }
# embassy-executor = { git = "https://github.com/embassy-rs/embassy.git", rev = "6186d111a5c150946ee5b7e9e68d987a38c1a463" }
# embassy-futures = { git = "https://github.com/embassy-rs/embassy.git", rev = "6186d111a5c150946ee5b7e9e68d987a38c1a463" }
# embassy-stm32 = { git = "https://github.com/embassy-rs/embassy.git", rev = "6186d111a5c150946ee5b7e9e68d987a38c1a463" }
# embassy-sync = { git = "https://github.com/embassy-rs/embassy.git", rev = "6186d111a5c150946ee5b7e9e68d987a38c1a463" }
embassy-time = { git = "https://github.com/embassy-rs/embassy.git", rev = "6186d111a5c150946ee5b7e9e68d987a38c1a463" }
embedded-hal = { git = "https://github.com/rust-embedded/embedded-hal", rev = "520945278942c301433c391f63a075227d9e7c84" }

# Forked until <https://github.com/jmg049/i24/pull/17> is merged
i24 = { git = "https://github.com/BlinkyStitt/i24.git", rev = "4f41af60055f756740572121bb7ff1cadf39233b" }
