[package]
edition = "2021"
name = "musical-adafruit-sparkle"
version = "0.1.0"

[[bin]]
name = "musical-adafruit-sparkle"
path = "./src/bin/main.rs"

[dependencies]
bleps = { git = "https://github.com/bjoernQ/bleps", package = "bleps", rev = "ca149efc842324f2cc282ea743897e204cf920b5", features = [
  "async",
  "macros",
] }
defmt = "1.0.1"
embassy-net = { version = "0.7.0", features = [
  "dhcpv4",
  "medium-ethernet",
  "tcp",
  "udp",
] }
embedded-io = "0.6.1"
embedded-io-async = "0.6.1"
esp-alloc = "0.8.0"
esp-backtrace = { version = "0.16.0", features = [
  "defmt",
  "esp32",
  "exception-handler",
  "panic-handler",
] }
esp-hal = { version = "1.0.0-beta.1", features = [
  "defmt",
  "esp32",
  "unstable",
] }
esp-println = { version = "0.14.0", features = ["defmt-espflash", "esp32"] }
# for more networking protocol support see https://crates.io/crates/edge-net
critical-section = "1.2.0"
embassy-executor = { version = "0.7.0", features = ["defmt", "nightly"] }
embassy-sync = { version = "0.7.0", features = ["defmt"] }
embassy-futures = { version = "0.1.1", features = ["defmt"] }
embassy-time = { version = "0.4.0", features = ["generic-queue-8"] }
esp-hal-embassy = { version = "0.8.1", features = ["esp32"] }
esp-hal-smartled = { git = "https://github.com/esp-rs/esp-hal-community.git", branch = "main", version = "0.15.0", features = [
  "defmt",
  "esp32",
] }
esp-wifi = { version = "0.14.1", features = [
  "ble",
  "builtin-scheduler",
  "coex",
  "defmt",
  "esp-alloc",
  "esp32",
  "wifi",
] }
heapless = { version = "0.8.0", default-features = false }
lsm9ds1 = { git = "https://github.com/BlinkyStitt/lsm9ds1", version = "0.1.0" }
musical-lights-core = { path = "../musical-lights-core", default-features = false, features = [
  "defmt",
  "embassy",
  "libm",
] }
static_cell = { version = "2.1.1", features = ["nightly"] }
smart-leds = "0.4.0"
smoltcp = { version = "0.12.0", default-features = false, features = [
  "medium-ethernet",
  "multicast",
  "proto-dhcpv4",
  "proto-dns",
  "proto-ipv4",
  "socket-dns",
  "socket-icmp",
  "socket-raw",
  "socket-tcp",
  "socket-udp",
] }
sx1262 = { version = "0.2.1", features = ["defmt"] }
ws2812-async = "0.3.0"

# TODO: this is incompatible with the current esp-hal version (1.0.0-beta.0). its on main, but not released yet
# TODO: i think its only a blocking method of writing though. so i don't know if we want it. maybe its okay if we keep it on core 1?
# esp-hal-smartled = { version = "*", features = ["esp32"] }

[patch.crates-io]
# Patched until <https://github.com/jmg049/i24/pull/17> is released. it has already been merged
i24 = { git = "https://github.com/jmg049/i24.git", rev = "50cf8bfa5d1a357de3b2d09400a018fdeec6370c" }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
