[package]
name = "musical-adafruit-sparkle-idf"
version = "0.1.0"
authors = ["Bryan Stitt <bryan@stitthappens.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "musical-adafruit-sparkle-idf"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "s"

[features]
default = []

experimental = ["esp-idf-svc/experimental"]

[dependencies]
biski64 = { version = "0.3.2", default-features = false }
embassy-time = {version = "0.4", features = ["generic-queue-8"]}
esp-idf-svc = { version = "0.51", features = ["critical-section", "embassy-time-driver"] }
esp-idf-sys = { version = "*", features = ["binstart"] }
eyre = "0.6.12"
heapless = { version = "0.8.0", features = ["portable-atomic", "serde"] }
log = "0.4"
smart-leds = "0.4"
smart-leds-trait = "0.3.1"
ws2812-esp32-rmt-driver = { version = "*", features = ["smart-leds-trait"] }
flume = "0.11.1"
musical-lights-core = { path = "../musical-lights-core", default-features = false, features = [
    "alloc", "std", "log"
] }
postcard = "1.1.1"
rand = { version = "0.9.1", default-features = false, features = ["nightly"] }

[build-dependencies]
embuild = "0.33"
