[package]
name = "musical-adafruit-sparkle-idf"
version = "0.1.0"
authors = ["Bryan Stitt <bryan@stitthappens.com>"]
edition = "2021"
resolver = "2"

[[bin]]
name = "musical-adafruit-sparkle-idf"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "s"

[features]
default = []

experimental = ["esp-idf-svc/experimental"]

[dependencies]
biski64 = { version = "0.3.2", default-features = false }
dagc = "0.1.1"
embassy-time = {version = "0.4", features = ["generic-queue-8"]}
embedded-graphics = { version = "0.8.1", features = ["nalgebra_support", "defmt"] }
esp-idf-svc = { version = "0.51", features = ["critical-section", "embassy-time-driver"] }
# we need the "rmt-legacy" feature so that we can receive too. the newer driver only supports transmit
# <https://github.com/esp-rs/esp-idf-hal/issues/512#issuecomment-3050467212>
esp-idf-hal = { version = "*", features = ["rmt-legacy"] }
esp-idf-sys = { version = "*", features = ["binstart"] }
eyre = "0.6.12"
flume = "0.11.1"
heapless = { version = "0.8.0", features = ["portable-atomic", "serde"] }
itertools = { version = "0.14.0", default-features = false }
infrared = { version = "0.14.2", features = ["defmt"] }
log = "0.4"
musical-lights-core = { path = "../musical-lights-core", default-features = false, features = [
    "alloc", "std", "log"
] }
once_cell = { version = "1.21.3", features = ["parking_lot", "portable-atomic", "critical-section"] }
postcard = "1.1.2"
rand = { version = "0.9.1", default-features = false, features = ["nightly"] }
smart-leds = "0.4"
smart-leds-trait = "0.3.1"
static_cell = { version = "2.1.1", features = ["nightly"] }
ws2812-esp32-rmt-driver = { version = "*", features = ["embedded-graphics-core", "smart-leds-trait"] }
smart-leds-matrix = "0.2.0"

[patch.crates-io]
# TODO: not sure about this
esp-idf-svc = { git = "https://github.com/esp-rs/esp-idf-svc.git", rev = "e0d9c76e83122ac991526a6c6f296b12cf698258" }
esp-idf-hal = { git = "https://github.com/esp-rs/esp-idf-hal.git", rev = "71179237888568453fa5eb129b4971d5ec54c90a" }

# Patched until <https://github.com/jmg049/i24/pull/17> is released. it has already been merged
i24 = { git = "https://github.com/jmg049/i24.git", rev = "50cf8bfa5d1a357de3b2d09400a018fdeec6370c" }

[build-dependencies]
embuild = "0.33"
