[package]
name = "musical-feather-m0"
version = "0.1.0"
authors = ["Bryan Stitt <bryan@stitthappens.com>"]
description = "Musical Lights for the Adafruit Feather M0"
keywords = ["no-std", "arm", "cortex-m", "embedded-hal"]
categories = ["embedded", "hardware-support", "no-std"]
repository = "https://github.com/WyseNynja/musical-lights-rs"
readme = "README.md"
edition = "2024"
resolver = "2"

# for cargo flash
[package.metadata]
chip = "ATSAMD21G18A"

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.5"
feather_m0 = "0.18.4"
embassy-executor = { version = "0.7.0", features = [
    "arch-cortex-m",
    "executor-thread",
    "log",
    "nightly",
] }
embassy-sync = { version = "0.6.2", features = ["log"] }
musical-lights-core = { path = "../musical-lights-core" }
panic-halt = { version = "1.0", optional = true }
panic-semihosting = { version = "0.6", optional = true }

# # TODO: use defmt instead of log. it requires some extra setup though
log = "0.4.27"

# # TODO: make this work. i think we need to do something to make the feather_m0 clock stuff integrate with embassy-executor/integrated-timers.
# embassy-time = { version = "0.2.0", features = ["log", "tick-hz-32_768"] }

[features]
default = ["dep:panic-halt"]
use_semihosting = ["dep:panic-semihosting"]

# [patch.crates-io]
# embassy-executor = { git = "https://github.com/embassy-rs/embassy.git", rev = "fcbbef01cd3c5292be29b78b674f0593277545e7" }
# embassy-sync = { git = "https://github.com/embassy-rs/embassy.git", rev = "fcbbef01cd3c5292be29b78b674f0593277545e7" }

#embassy-time = { git = "https://github.com/embassy-rs/embassy.git", rev = "fcbbef01cd3c5292be29b78b674f0593277545e7" }

[profile.dev]
incremental = false
codegen-units = 1
debug = true
lto = false

[profile.release]
debug = true
lto = true
opt-level = "s"
