[package]
name = "musical-leptos"
version = "0.1.0"
edition = "2021"
authors = ["Bryan Stitt <bryan@stitthappens.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
musical-lights-core = { path = "../musical-lights-core", features=["log"] }

console_error_panic_hook = "0.1"
console_log = "1"
flume = "0.11.0"
leptos = { version = "0.6", features = ["csr", "nightly"] }
leptos_meta = { version = "0.6", features = ["csr", "nightly"] }
leptos_router = { version = "0.6", features = ["csr", "nightly"] }
log = "0.4"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.42"
web-sys = { version = "0.3", features = ["console", "AudioContext", "AudioDestinationNode", "AudioWorklet", "AudioWorkletNode", "AudioWorkletNodeOptions", "BaseAudioContext", "BlobPropertyBag", "Document", "MediaDevices", "MediaStream", "MediaStreamConstraints", "Navigator", "TextDecoder", "Window"] }
js-sys = "0.3.69"
terrors = "0.3.0"

# utils
# strum = { version = "0.25", features = ["derive", "strum_macros"] }
# strum_macros = "0.25"


[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
