[package]
name = "musical-leptos"
version = "0.1.0"
edition = "2021"
authors = ["Bryan Stitt <bryan@stitthappens.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
musical-lights-core = { path = "../musical-lights-core", features=["log"] }

console_error_panic_hook = "0.1"
console_log = "1"
flume = "0.11.0"
js-sys = "0.3.69"
leptos = { version = "0.6", features = ["csr", "nightly"] }
leptos_meta = { version = "0.6", features = ["csr", "nightly"] }
leptos_router = { version = "0.6", features = ["csr", "nightly"] }
log = "0.4"
serde = { version = "1.0.198", default-features = false, features = ["derive"] }
terrors = "0.3.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.42"
web-sys = { version = "0.3", features = ["console", "AudioContext", "AudioContextOptions", "AudioDestinationNode", "AudioWorklet", "AudioWorkletNode", "AudioWorkletNodeOptions", "BaseAudioContext", "BlobPropertyBag", "Document", "MediaDevices", "MediaStream", "MediaStreamConstraints", "MediaStreamAudioSourceNode", "Navigator", "TextDecoder", "Window"] }

#leptos_workers = "0.2.1"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
