[package]
name = "musical-lights-core"
version = "1.0.0"
edition = "2021"

[dependencies]
circular-buffer = { version = "0.1.9", default-features = false }
defmt = { version = "0.3.100", default-features = false, optional = true }
enterpolation = { version = "0.2.1", default-features = false, features = ["bspline", "linear"] }
log = { version = "*", default-features = false, optional = true }
microfft = { version = "0.6.0", default-features = false, features = ["size-2048"] }
micromath = "2.1.0"
num = { version = "0.4.3", default-features = false }
num-complex = { version = "0.4.6", default-features = false }
palette = { version = "0.7.6", default-features = false }
smart-leds = "0.4.0"

# # TODO: use these?
# embedded-graphics = "0.8.1"
# embedded-graphics-framebuf = "0.5.0"
# cichlid = { version = "0.2.1", features = ["no-std"] }

[dev-dependencies]
test-log = "0.2.17"

[features]

# TODO: defmt should be optional. both defmt and log should be additive!

default = ["libm", "defmt"]
defmt = ["dep:defmt"]
libm = ["palette/libm", "enterpolation/libm", "num/libm", "num-complex/libm"]
std = ["log?/std", "microfft/std", "num/std", "num-complex/std", "palette/std", "enterpolation/std"]
