[package]
name = "musical-lights-core"
version = "1.0.0"
edition = "2024"

[dependencies]
circular-buffer = { version = "1.1.0", default-features = false }
cobs = { version = "0.3.0", default-features = false }
crc = "3.3.0"
defmt = { version = "1.0.1", default-features = false, optional = true }
embedded-io = "0.6.1"
embedded-io-async = "0.6.1"
enterpolation = { version = "0.3.0", default-features = false, features = [
    "bspline",
    "linear",
] }
eyre = { version = "0.6.12", default-features = false }
flume = { version = "0.11.1", default-features = false, features = [
    "async",
    "nanorand",
] }
heapless = { version = "0.8.0", features = ["serde"] }
log = { version = "*", default-features = false, optional = true }
microfft = { version = "0.6.0", default-features = false, features = [
    "size-2048",
] }
micromath = "2.1.0"
num = { version = "0.4.3", default-features = false }
num-complex = { version = "0.4.6", default-features = false }
palette = { version = "0.7.6", default-features = false }
postcard = { version = "1.1.1", features = ["use-crc"] }
serde = { version = "1.0.219", default-features = false }
smart-leds = "0.4.0"

# # TODO: use these?
# embedded-graphics = "0.8.1"
# embedded-graphics-framebuf = "0.5.0"
# cichlid = { version = "0.2.1", features = ["no-std"] }

[dev-dependencies]
test-log = "0.2.17"

[features]

# TODO: defmt should be optional. both defmt and log should be additive!

default = ["std", "defmt"]

alloc = [
    "circular-buffer/alloc",
    "cobs/alloc",
    "defmt/alloc",
    "num/alloc",
    "palette/alloc",
    "postcard/alloc",
    "serde/alloc",
]
defmt = ["dep:defmt", "cobs/defmt", "postcard/use-defmt", "heapless/defmt-03"]
libm = [
    "palette/libm",
    "enterpolation/libm",
    "num/libm",
    "num-complex/libm",
    "heapless/portable-atomic",
]
std = [
    "cobs/use_std",
    "enterpolation/std",
    "log?/std",
    "microfft/std",
    "num-complex/std",
    "num/std",
    "palette/std",
    "postcard/use-std",
    "serde/std",
]
