[package]
name = "musical-lights-mac"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
cpal = "0.15.2"
critical-section = { version = "1.1", features = ["std"] }
embassy-executor = { version = "0.4.0", features = ["arch-std", "executor-thread", "integrated-timers", "log", "nightly"] }
embassy-time = { version = "0.2.0", features = ["log", "std"] }
env_logger = "0.10.1"
log = "0.4.20"
musical-lights-core = { path = "../musical-lights-core" }
microfft = { version = "0.5.1", features = ["std"] }
flume = "0.11.0"
