[package]
name = "musical-stm32"
version = "1.0.0"
authors = ["Bryan Stitt <bryan@stitthappens.com>"]
description = "Musical Lights for STM32"
repository = "https://github.com/WyseNynja/musical-lights-rs"
readme = "README.md"
edition = "2021"
resolver = "2"
default-run = "musical-stm32"

[dependencies]
circular-buffer = { version = "0.1.6", default-features = false }
cortex-m = { version = "0.7.7", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.3"
defmt = "0.3"
defmt-rtt = "0.4"
embassy-embedded-hal = "0.1.0"
embassy-executor = { version = "0.5.0", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers", "nightly"] }
embassy-futures = "0.1.1"
embassy-stm32 = { version = "0.1.0", features = ["defmt", "stm32f411ce", "unstable-pac", "memory-x", "time-driver-any", "exti"]  }
embassy-sync = { version = "0.5.0", features = ["defmt"] }
embassy-time = { version = "0.3", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }
enterpolation = { version = "0.2.1", default-features = false, features = ["libm", "linear"] }
itertools = { version = "0.12.0", default-features = false }
micromath = "2.1.0"
musical-lights-core = { path = "../musical-lights-core", default-features = false, features = ["libm", "defmt"] }
palette = { version = "0.7.3", features = ["libm"], default-features = false }
panic-probe = { version = "0.3", features = ["print-defmt"] }
smart-leds = "0.4.0"
smart-leds-trait = "0.3.0"
ws2812-async = "0.1.0"

# TODO: if i end up using these, be sure to set patch.crate-io, too
#embassy-futures = { version = "0.1.1" }
#embassy-usb = { version = "0.1.0", features = ["defmt"] }

# TODO: do i want this?
#embedded-graphics = "0.8.1"

[features]

[patch.crates-io]
# TODO: embassy feature on musical-lights-core that handles this?
embassy-embedded-hal = { git = "https://github.com/embassy-rs/embassy.git", rev = "04eb56a884ab4f2bfaf7effb9392706bb8260178" }
embassy-executor = { git = "https://github.com/embassy-rs/embassy.git", rev = "04eb56a884ab4f2bfaf7effb9392706bb8260178" }
embassy-futures = { git = "https://github.com/embassy-rs/embassy.git", rev = "04eb56a884ab4f2bfaf7effb9392706bb8260178" }
embassy-stm32 = { git = "https://github.com/embassy-rs/embassy.git", rev = "04eb56a884ab4f2bfaf7effb9392706bb8260178" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy.git", rev = "04eb56a884ab4f2bfaf7effb9392706bb8260178" }
embassy-time = { git = "https://github.com/embassy-rs/embassy.git", rev = "04eb56a884ab4f2bfaf7effb9392706bb8260178" }
embedded-hal = { git = "https://github.com/rust-embedded/embedded-hal", rev = "f8c79fee1df1900ee59e90160729edfa16a99b63" }

# upgrade all the deps to get things onto 1.0.0
ws2812-async = { git = "https://github.com/WyseNynja/ws2812-async.git", rev = "bb1004e9f2379a1e7fa072ed453494d3e014ad53" }

#smart-leds-matrix = { git = "https://github.com/WyseNynja/smart-leds-matrix.git", rev = "bc4188d311498c9396afc9c798ce42171c009ab1" }

[profile.dev]
incremental = false
codegen-units = 1
debug = true
lto = true

# timings on neopixels are very sensitive. i think we will need "3", but it might not fit!
# # TODO: optimisize for size when compiling?
opt-level = 3

[profile.release]
debug = true
lto = true

opt-level = 3
