[package]
name = "terminal_mac"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.98"
cpal = "0.15.3"
critical-section = { version = "1.2", features = ["std"] }
embassy-executor = { version = "0.6.3", features = ["arch-std", "executor-thread", "log", "nightly"] }
embassy-sync = { version = "0.6.2", features = ["log", "std"] }
embassy-time = { version = "0.3.2", features = ["log", "std"] }
env_logger = "0.11.8"
flume = "0.11.1"
log = { version = "0.4.27", features = ["std"] }
musical-lights-core = { path = "../musical-lights-core", features = ["std", "log"] }
