[package]
name = "wasm-audio-worklet"
version = "0.1.0"
edition = "2021"
rust-version = "1.57"

[lib]
crate-type = ["cdylib"]

[dependencies]
console_log = "1.0.0"
js-sys = "0.3.72"
wasm-bindgen = "0.2.95"
wasm-bindgen-futures = "0.4.45"
console_error_panic_hook = "*"

[dependencies.web-sys]
version = "0.3.72"
features = [
  "AudioContext",
  "AudioDestinationNode",
  "AudioWorklet",
  "AudioWorkletNode",
  "AudioWorkletNodeOptions",
  "Blob",
  "BlobPropertyBag",
  "Document",
  "Event",
  "HtmlInputElement",
  "HtmlLabelElement",
  "Url",
  "Window",
]
